# leftright

./: CMakeLists.txt
eval/: CMakeLists.txt  evaluate_leftright.cpp
eval/data-structures/: BSTNode.cpp  BSTNode.h  map.h
eval/utils/: fake_work.hh  wyhash.h
include/mpm/: leftright.h  partiallock.h  twowriter_leftright.h
